# expense_categories_-_codes

my-app/: .gitignore  README.md  package.json
my-app/backend/: app.db  pyproject.toml
my-app/backend/src/: app.py  database.py  dataclasses.py  models.py
my-app/backend/test/: test_routes.py
my-app/frontend/: eslint.config.js  package.json  vite.config.js
my-app/frontend/src/: App.jsx
my-app/frontend/src/components/: ExpenseCategory.jsx  ExpenseCodes.jsx
my-app/frontend/src/hooks/: useCategory.jsx  useCategory.test.jsx
